fixed color name on mobiles

--- a/src/modules/colors/components/colorBlock/components/ColorName/ColorName.scss
+++ b/src/modules/colors/components/colorBlock/components/ColorName/ColorName.scss
@@ -10,16 +10,11 @@
         font-size: 1.6em;
     }
     @media(max-width: 992px) {
-        top: initial;
-        position: static;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        transform: translate(0, 50%);
+        top: 26%;
         font-size: 2em;
     }
     @media(max-width: 576px) {
+        top: 20%;
         margin-top: .8em;
         font-size: 1.6em;
     }
